XD-1627 Fix advanced editor in sql op panel's overflow issue

--- a/assets/stylesheets/less/partials/opPanel.less
+++ b/assets/stylesheets/less/partials/opPanel.less
@@ -3698,11 +3698,14 @@
             opacity: 1;
         }
     }
-    .CodeMirror-wrap {
-        height: 100%;
-    }
     .CodeMirror-gutters {
         background-color: @color-xpe-docker-starter-bg;
+    }
+
+    #sqlSnippetEditWrapper {
+        .CodeMirror {
+            height: 100%;
+        }
     }
 }
 
